Add input validation

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
         <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
 
-        <input type="text" placeholder="Set final score" class="final-score">
+        <input type="number" min="0" placeholder="Set final score" class="final-score">
 
         <img src="dice/4.png" alt="Dice" class="dice">
 
